# GPUTERM

./: .gitignore  LICENSE  README.ko.md  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
scripts/: sign-macos-ad-hoc.sh
src/: App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  detail.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  native_drag.rs
src-tauri/src/ssh/: agent_monitor.rs  credentials.rs  gpu_monitor.rs  local_fs.rs  macos_monitor.rs  mod.rs  parse_util.rs  resource_details.rs  session.rs  sftp.rs  system_monitor.rs  terminal.rs  windows_monitor.rs
src/components/: AgentUsagePopover.tsx  AppMessage.tsx  CpuUsagePopover.tsx  CredentialVaultGate.test.tsx  CredentialVaultGate.tsx  DetailWindow.tsx  DiskUsagePopover.tsx  GpuSelector.tsx  GpuStatusBar.tsx  GpuUsagePopover.test.tsx  GpuUsagePopover.tsx  LocalFilePanel.tsx  MemoryUsagePopover.tsx  RemoteFilePanel.tsx  RemoteTelemetryBar.test.tsx  RemoteTelemetryBar.tsx  ResourceDetailPopover.tsx  SessionSidebar.test.tsx  SessionSidebar.tsx  SftpBrowser.test.tsx  SftpBrowser.tsx  TerminalPane.test.tsx  TerminalPane.tsx  TransferQueue.tsx  UsersPopover.tsx
src/hooks/: useDisconnectSession.ts
src/stores/: sessionStore.ts  transferStore.ts
src/types/: credentials.ts  gpu.ts  resourceDetails.ts  session.ts  transfer.ts
src/utils/: diskPriority.test.ts  diskPriority.ts  format.test.ts  format.ts  formatBytes.ts  hostKeyPrompt.ts  nativeFileDrag.test.ts  nativeFileDrag.ts  terminalBuffer.test.ts  terminalBuffer.ts  terminalLayout.test.ts  terminalLayout.ts  xtermHangulIme.test.ts  xtermHangulIme.ts
