[package]
name = "gputerm"
version = "1.0.3-beta"
description = "GpuTerm desktop SSH/SFTP client with GPU monitoring"
authors = ["GpuTerm"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "gputerm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4", "serde"] }
