[package]
name = "gputerm"
version = "1.1.7-beta"
description = "GpuTerm desktop SSH/SFTP client with GPU monitoring"
authors = ["GpuTerm"]
license = "PolyForm-Noncommercial-1.0.0"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "gputerm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Encodes PowerShell scripts for -EncodedCommand so Windows telemetry commands
# survive whichever default shell (cmd.exe or PowerShell) the OpenSSH server uses.
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
drag = "2.1.1"
portable-pty = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# openssl-on-win32 + vendored-openssl build libssh2 against OpenSSL instead of
# WinCNG so modern key-exchange algorithms (curve25519-sha256, ecdh-sha2-nistp*)
# are available on Windows; the WinCNG backend only offers modp DH groups,
# which current OpenSSH servers no longer accept by default.
ssh2 = { version = "0.9", features = ["vendored-openssl", "openssl-on-win32"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1.8"

[target.'cfg(target_os = "linux")'.dependencies]
gdkx11 = "0.18"
gtk = "0.18"
url = "2"
